--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
   },
   "homepage": "https://github.com/tsg1204/survey-by-email#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.16",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^8.86.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0"
   }
 }
