--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/tsg1204/survey-by-email#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.5",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
